fix-overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -17,6 +17,7 @@
 
 body {
   font-family: rubik, sans-serif;
+  overflow-x: hidden;
 }
 
 .container {
